# git-flush

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
git_flush/: main.py
