[tool.poetry]
name = "git-flush"
version = "0.1.6"
description = ""
authors = ["Nathan Patton <npatton@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
git-flush = "git_flush.main:app"

[tool.poetry.dependencies]
python = "^3.9"
typer = "^0.12.3"
gitpython = "^3.1.43"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
